fix: If links are empty then href is not available, updated tourDates, scroll should be visible on mobile, linehieght for h2

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
 	}
 
 	h2 {
-		@apply text-headingMobile sm:text-headingNormal font-newKidz text-flou-orange sm:leading-[1.1];
+		@apply text-headingMobile sm:text-headingNormal font-newKidz leading-[1.1] text-flou-orange sm:leading-[1.1];
 	}
 
 	h5 {
